@@ -1,5 +1,7 @@
 package org.sophy.sophy.config;
 
+import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.sophy.sophy.jwt.JwtAccessDeniedHandler;
 import org.sophy.sophy.jwt.JwtAuthenticationEntryPoint;
@@ -18,12 +20,11 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-
 @Configuration
 @RequiredArgsConstructor
 @EnableWebSecurity
 public class SecurityConfig {
+
     private final TokenProvider tokenProvider;
     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final JwtAccessDeniedHandler jwtAccessDeniedHandler;
@@ -41,51 +42,52 @@ public class SecurityConfig {
         //CSRF 설정 Disable
         http.csrf().disable()
 
-                .cors(cors -> cors.disable())
+            .cors(cors -> cors.disable())
 
-                //exception handling 할 때 우리가 만든 클래스를 추가
-                .exceptionHandling()
-                .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                .accessDeniedHandler(jwtAccessDeniedHandler)
+            //exception handling 할 때 우리가 만든 클래스를 추가
+            .exceptionHandling()
+            .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+            .accessDeniedHandler(jwtAccessDeniedHandler)
 
-                .and()
-                .headers()
-                .frameOptions()
-                .sameOrigin()
+            .and()
+            .headers()
+            .frameOptions()
+            .sameOrigin()
 
-                //시큐리티는 기본적으로 세션을 사용
-                //여기서는 세션을 사용하지 않기 때문에 세션 설정을 Stateless 로 설정
-                .and()
-                .sessionManagement()
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            //시큐리티는 기본적으로 세션을 사용
+            //여기서는 세션을 사용하지 않기 때문에 세션 설정을 Stateless 로 설정
+            .and()
+            .sessionManagement()
+            .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
 
-                //로그인, 회원가입 API는 토큰이 없는 상태에서 요청이 들어오기 때문에 permitAll 설정
-                .and()
-                .authorizeRequests()
-                .antMatchers("/author/**").hasRole("AUTHOR")
-                .antMatchers("/auth/**").permitAll()
-                .antMatchers("/profile/**").permitAll()
-                .antMatchers("/actuator/**").permitAll()
-                .antMatchers("/health/**").permitAll()
-                .antMatchers("/home/**").permitAll()
-                .antMatchers("/booktalk/search/**").permitAll()
-                .antMatchers("/swagger-ui/**", "/v3/api-docs/**", "/api-docs/**").permitAll()
-                .anyRequest().authenticated() //나머지 API는 전부 인증 필요
+            //로그인, 회원가입 API는 토큰이 없는 상태에서 요청이 들어오기 때문에 permitAll 설정
+            .and()
+            .authorizeRequests()
+            .antMatchers("/author/**").hasRole("AUTHOR")
+            .antMatchers("/auth/**").permitAll()
+            .antMatchers("/profile/**").permitAll()
+            .antMatchers("/actuator/**").permitAll()
+            .antMatchers("/health/**").permitAll()
+            .antMatchers("/home/**").permitAll()
+            .antMatchers("/booktalk/search/**").permitAll()
+            .antMatchers("/swagger-ui/**", "/v3/api-docs/**", "/api-docs/**").permitAll()
+            .anyRequest().authenticated() //나머지 API는 전부 인증 필요
 
-                //JwtFilter 를 addFilterBefore 로 등록했던 JwtSecurityConfig 클래스를 적용
-                .and()
-                .apply(new JwtSecurityConfig(tokenProvider, redisTemplate, jwtExceptionFilter));
+            //JwtFilter 를 addFilterBefore 로 등록했던 JwtSecurityConfig 클래스를 적용
+            .and()
+            .apply(new JwtSecurityConfig(tokenProvider, redisTemplate, jwtExceptionFilter));
 
         return http.build();
     }
+
     // CORS 허용 적용
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("HEAD","POST","GET","DELETE","PUT"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("HEAD", "POST", "GET", "DELETE", "PUT"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
